[package]
name = "clockping"
version = "1.0.0"
edition = "2024"
license = "MIT"
description = "A multi-protocol, multi-target pinger for watching hosts go dark"
repository = "https://github.com/mi2428/clockping"
homepage = "https://github.com/mi2428/clockping"
readme = "README.md"
publish = false

[package.metadata.dist]
dist = true

[dependencies]
anyhow = "1.0.102"
async-trait = "0.1.89"
chrono = { version = "0.4.44", features = ["serde"] }
clap = { version = "4.6.1", features = ["derive"] }
clap_complete = "4.6.1"
libc = "0.2"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls-webpki-roots"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
socket2 = "0.6.3"
surge-ping = "0.8.4"
thiserror = "2.0.18"
tokio = { version = "1.52.1", features = ["full"] }
